###### Unreleased changes ######

2023-10-02 Simon Gao <sgao@shoobx.com>
   # Ensure that the main component shows up in the main panel on start.
   # Fix passing the XPDL filename on the command line.

2022-06-22 Albertas Agejevas <alga@shoobx.com>
   # Revert the switch to XALAN in order to maintain output format consistency.

###### TWE 5.6-1 RELEASED ######

###### TWE 5.5-2 RELEASED ######

###### TWE 5.5-1 RELEASED (2017-07-22) ######

###### TWE 5.4-6 RELEASED ######
2017-05-18 Sasa Bojanic <sasaboy@together.at>
   # Improved support for MailToolAgent for sending signed emails

2017-05-15 Sasa Bojanic <sasaboy@together.at>
   # Improved GUI so that boolean properties can be represented by radio-button with the "null" value

###### TWE 5.4-5 RELEASED (2017-04-27) ######
2017-03-30 Anat Usa-ampai <A.Usa-ampai@togetherteam.co.th>
   # NSIS Installation changed so that special characters like | are supported in (branded) project name
   
###### TWE 5.4-4 RELEASED (2017-03-02) ######
2017-02-28 Sasa Bojanic <sasaboy@together.at>
   # Docbook documentation split into several chapters which are included into main document using docbook's xinclude. 
     During the build time, the build procedure merges all the documentation parts together and builds the HTML/PDF documentation
   # xmltask component added to the project

2017-02-14 Sasa Bojanic <sasaboy@together.at>
   # Fixed issue when template activity has deadline defined

2017-02-13 Sasa Bojanic <sasaboy@together.at>
   # Branding procedure improved: now there is deletions.txt file in some branding folders where one can list the files of that group to be deleted
   # When new Deadline is created, the script type is now initially set to text/sharkwfdeadlines

2017-02-02 Sasa Bojanic <sasaboy@together.at>
   # Branding procedure improved to sign the resulting EXE file   
   # Branding procedure improved to replace entries in i18n files and copy the whole file only if it didn't exists